Closed Bug 1784851 Opened 2 years ago Closed 2 years ago

Break the cycle of InputStreamTunnel and TLSTransportLayer

Categories

(Core :: Networking: HTTP, defect, P2)

defect

Tracking

()

RESOLVED FIXED
105 Branch
Tracking Status
firefox105 --- fixed

People

(Reporter: kershaw, Assigned: kershaw)

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

During my local test with this patch, I found that a memory leak caused by the reference cycle of InputStreamTunnel and TLSTransportLayer.
To break this cycle, we have to call InputStreamTunnel and TLSTransportLayer with a null callback to clear the mCallback.

Pushed by kjang@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/8c5334cd7794
Clear InputStreamTunnel::mCallback when TLSTransportLayer::Close is called, r=necko-reviewers,dragana
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 105 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: