Bug 1784851 - Clear InputStreamTunnel::mCallback when TLSTransportLayer::Close is called, r=necko-reviewers,dragana

Differential Revision: https://phabricator.services.mozilla.com/D154867